unpackaged/main/default/objects/Highlighted_Text__c/Highlighted_Text__c.object-meta.xml
<CustomObject>
    <label>Highlighted Text</label>
    <nameField>
        <displayFormat>H-{00000}</displayFormat>
        <label>Highlight ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Highlighted Text</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>