unpackaged/main/default/objects/Highlighted_Text__c/fields/Funding_Award_Request__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Award (Request)</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Highlighted Text</relationshipLabel>
    <relationshipName>Highlighted_Text</relationshipName>
    <type>Lookup</type>
</CustomField>