unpackaged/main/default/objects/Highlighted_Text__c/fields/Grantee_Report__c.field-meta.xml
<CustomField>
    <fullName>Grantee_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grantee Report</label>
    <referenceTo>FundingAwardRequirement</referenceTo>
    <relationshipLabel>Highlighted Text</relationshipLabel>
    <relationshipName>Highlighted_Text</relationshipName>
    <type>Lookup</type>
</CustomField>