unpackaged/main/default/objects/Highlighted_Text__c/fields/Highlighted_Text__c.field-meta.xml
<CustomField>
    <fullName>Highlighted_Text__c</fullName>
    <label>Highlighted Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>