unpackaged/main/default/objects/Highlighted_Text__c/fields/Wins__c.field-meta.xml
<CustomField>
    <fullName>Wins__c</fullName>
    <label>Wins</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>advocacy win</fullName>
            </value>
            <value>
                <fullName>capacity building win</fullName>
            </value>
            <value>
                <fullName>social movements win</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>